      treatment arm Y in any multi-arm study
    - no error if argument 'event1' is not an R object created with
      pairwise() and argument 'data' is not used
    - no error in printing of network meta-analysis object if argument
      'event1' is not an R object created with pairwise()

  * netgraph():
    - argument 'seq' equal to "optimal" works for a single design
    - argument 'lwd.highlight' no longer ignored

  * pairwise():
    - no error if function is used without argument 'data'

 ** User-visible changes **

  * netgraph():
    - new argument 'bg.points'

 ** Internal changes **

  * multiarm():
    - use ginv() to calculate inverse of matrix Lt
    - set very small negative values in matrix W equal to zero
    - object k instead of n denotes number of treatment arms
      (same notation as Rücker & Schwarzer, 2014)


**** netmeta, version 1.0-1, 2019-01-02 ***

 ** User-visible changes **

  * Revision of help page examples
    - to reflect changes in netmeta, versions 0.9-8 and 1.0-0
    - to reduce runtime below 5 seconds (CRAN requirement)


*** netmeta, version 1.0-0, 2018-12-20 ***

 ** Major changes **

  * Orestis Efthimiou <oremiou@gmail.com> is a new co-author of R
    package netmeta

  * New function netmetabin() for network meta-analysis of binary data
    using the Mantel-Haenszel method or the non-central hypergeometric
    distribution

  * New function funnel.netmeta() for 'comparison-adjusted' funnel
    plots

  * New function forest.netcomb() for forest plots of additive network
    meta-analysis

  * New functions netbind(), forest.netbind(), and print.netbind() to
    combine network meta-analysis objects and to generate a forest
    plot with results of several network meta-analyses

  * Separate Indirect from Direct Design Evidence (SIDDE) method
    implemented in netsplit()

  * All network comparisons can be included in a forest plot

  * Circular network graphs with minimal number of crossings available
